workshop04/base/wordpress-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  labels:
    name: wordpress-ing
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: “5“
    nginx.ingress.kubernetes.io/limit-rpm: “300“
    # nginx.ingress.kubernetes.io/defaultBackend: bggappv1-svc
spec:
  ingressClassName: nginx
  rules:
  - host: FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
